feat: migrating bcrypt to argon2

--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,45 @@
-# Database
-DATABASE_URL="postgresql://username:password@localhost:5432/hcq_lms?schema=public"
+# ⚠️ SECURITY WARNING:
+# This is a TEMPLATE file. Copy to .env and change ALL values!
+# NEVER commit your actual .env file to version control!
+# NEVER use these default values in production!
 
-# JWT
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
+# Database
+# PRODUCTION: Use strong password and secure connection
+DATABASE_URL="postgresql://username:CHANGE_THIS_PASSWORD@localhost:5432/hcq_lms?schema=public"
+
+# JWT Secret
+# PRODUCTION: Generate with: openssl rand -base64 64
+# This MUST be a long, random, cryptographically secure string!
+JWT_SECRET="CHANGE_THIS_TO_RANDOM_64_CHAR_STRING_IN_PRODUCTION"
 JWT_EXPIRATION="7d"
 
 # SMTP Email Configuration (Optional - untuk fitur email)
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER="your-email@gmail.com"
-SMTP_PASS="your-app-password"
+SMTP_PASS="your-app-specific-password"  # Use app-specific password, not your Gmail password!
 SMTP_FROM="HCQ LMS <noreply@hcq-lms.com>"
 
 # Application
 PORT=3000
-NODE_ENV="development"
+NODE_ENV="development"  # Set to "production" when deploying
 
 # File Upload
-MAX_FILE_SIZE=10485760
+MAX_FILE_SIZE=10485760  # 10MB in bytes
 UPLOAD_DIR="./uploads"
+
+# ═══════════════════════════════════════════════════════════
+# PRODUCTION DEPLOYMENT CHECKLIST:
+# ═══════════════════════════════════════════════════════════
+# [ ] Changed DATABASE_URL with strong password
+# [ ] Generated secure JWT_SECRET (64+ chars)
+# [ ] Set NODE_ENV=production
+# [ ] Changed all default user passwords from seed file
+# [ ] Configured SMTP with app-specific password
+# [ ] Enabled HTTPS/TLS
+# [ ] Set up database backups
+# [ ] Configured CORS for specific origins
+# [ ] Set up rate limiting
+# [ ] Read SECURITY.md for complete checklist
+# ═══════════════════════════════════════════════════════════
+
