--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ pids
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 /generated/prisma
+
+# Uploads (contains user-uploaded files - should not be in version control)
+/uploads
+uploads/
+*.uploaded.*
