--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@prisma/client": "^6.19.0",
-    "@trpc/server": "11.0.0-rc.477",
     "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -44,9 +43,7 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^6.19.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "superjson": "^2.2.5",
-    "zod": "^4.1.12"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
