--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ SMTP_PASS="your-app-specific-password"  # Use app-specific password, not your Gm
 SMTP_FROM="HCQ LMS <noreply@hcq-lms.com>"
 
 # Application
-PORT=3000
+PORT=4000 # port 3000 clashes with frontend
 NODE_ENV="development"  # Set to "production" when deploying
 
 # File Upload
